--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@
     min-height: 400px;
     width: 700px;
     background-color: red;
+    display: inline-block;
    }
    .subcontents{
     min-height: 200px;
