--- a/style.css
+++ b/style.css
@@ -18,21 +18,28 @@
     min-height: 300px;
     width: 200px;
     background-color: blue;
+    display: inline-block;
+    vertical-align: top;
+    margin-right: 20px;
    }
    #main_content{
     min-height: 400px;
-    width: 700px;
+    width: 725px;
     background-color: red;
     display: inline-block;
+    
    }
    .subcontents{
     min-height: 200px;
     width: 210px;
     background-color: yellow;
+    margin: 10px;
+    display: inline-block;
    }
    #advertisement{
     min-height: 120px;
-    width: 660px;
+    width: 680px;
     background-color: purple;
+    margin: 10px;
    }
    
