--- a/JSBStyles.css
+++ b/JSBStyles.css
@@ -8,7 +8,8 @@
     background-color: #cf3036;
     vertical-align: top;
     border-radius: 10px;
-    padding: 10px;
+    /*padding: 5px;*/
+    margin-bottom: 20px;
 }
 .header h1{
     color: #c2d5ec;
@@ -19,7 +20,8 @@
     border-radius: 10px;
     padding: 10px;
     display: inline-block;
-    vertical-align: top;
+    vertical-align: top; 
+    margin-right: 15px;
     
 } 
 .mainContent{
@@ -28,6 +30,7 @@
     border-radius: 10px;
     color: #c2d6ec;
     display: inline-block;
+    padding: 15px;
 }
 a{
     color: #c2d6ec;
@@ -38,4 +41,5 @@ ul{
 .footer{
     background-color: #297d8c;
     border-radius: 10px;
+    margin-top: 10px;
 }
